# ePnP_eigen

./: CMakeLists.txt  README.md  epnp.cpp  epnp.h  inter_matrix.txt  main_test.cpp  main_test_read.cpp  point_2d.txt  point_3d.txt
